--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=5045
-MONGDB_ULR='mongodb://localhost:27017/Blog_App'
+MONGDB_ULR='mongodb+srv://puviyarasus2023it:4yCNRn78eDuajR4t@cluster0.vbqkq.mongodb.net/myblogfinal'
 JWT_SECRET="this is blog app"
 CLOUDINARY_CLOUD_NAME='dyhy2tyyl'
 CLOUDINARY_API_KEY='665847516562245'
